--- a/index.html
+++ b/index.html
@@ -7,12 +7,48 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML stands for Hypertext Markup Language</li>
+          <li>HTML contains all of the base information for a website to use without much stylising or functionality</li>
+          <li>Tag refers only to what appears inside the angle brackets</li>
+          <li>Element refers to the entire code from opening tag to closing tag</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The meta element contains information about the page that is used by the browser</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The h1, h2, h3, h4, h5, and h6 elements represent different sizes of headers of text, and should be used in that order with h1 generally being used no more than once.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>List CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout branch-name: switches to branch entered</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>List JavaScript notes here</li>
+        </ul>
+      </section>
+
     </main>
 
     <footer>
