added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -29,7 +30,24 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>List CSS notes here</li>
+          <li>CSS stands for Cascading Style Sheets</li>
+          <li>CSS defines how webpage content is presented to users with regard to colors, aesthetics, visual layout, and organization.</li>
+          <li>There are three ways to style a webpage with CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+          <li>When a developer wants to style an element directly in the HTML file, they use inline CSS.</li>
+          <li>Inline styles apply to a specific HTML tag, using a style attribute with a CSS rule to style a particular page element only.</li>
+          <li>Useful for quick and permanent changes but less flexible than external and internal style sheets - each inline style must be edited individually whenever you make a design change</li>
+          <li>It is possible to embed an entire stylesheet directly in HTML using the style element in the head element.</li>
+          <li>Use of external CSS style sheets are most common and preferred because it allows develoeprs to keep all their CSS rules in a separate file which makes design changes easier.</li>
+          <li>When using an external style sheet, we link the file using a link element placed in the HTML's head element</li>
+          <li>A selector defines the element or attributes to which the rules, or declarations, will apply.</li>
+          <li>Declarations contain two important components: the CSS property we want to apply and the value of the property. For example, the declaration color: blue, includes the CSS property color and the value for that property, blue.</li>
+          <Li>The margin property indicates how much space we want around the outside of an element.</Li>
+          <li>The padding property is often confused with margin. The padding property adds space around the content inside of an element. See CSS box model</li>
+          <li>When you want to apply a rule to all elements visible on the page, use a * symbol for the selector.</li>
+          <li>Rather than repeat a rule, two or more elements that will share the same styling can be grouped together by combining their selectors into a single CSS rule with a comma.</li>
+          <li>Do Not Repeat Yourself or DRY coding encourages developers to reuse or share pieces of code in order to reduce the number of lines of code that need to be written or maintined</li>
+          <li>You can also designate rules to apply to specific elements using class selectors. Add a preiod before your slector to designate it as a class selector. Any HTML element assigned to the class will gain those properties.</li>
+          <li></li>
         </ul>
       </section>
 
