added JavaCript to application

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -47,7 +48,6 @@
           <li>Rather than repeat a rule, two or more elements that will share the same styling can be grouped together by combining their selectors into a single CSS rule with a comma.</li>
           <li>Do Not Repeat Yourself or DRY coding encourages developers to reuse or share pieces of code in order to reduce the number of lines of code that need to be written or maintined</li>
           <li>You can also designate rules to apply to specific elements using class selectors. Add a preiod before your slector to designate it as a class selector. Any HTML element assigned to the class will gain those properties.</li>
-          <li></li>
         </ul>
       </section>
 
@@ -63,7 +63,22 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>List JavaScript notes here</li>
+          <li>JavaScript is a high-level dynamic programming language that allows useres to interact with websites.</li>
+          <li>JS powers websites with effects, interactivity, data communication, and much more.</li>
+          <li>APIs are Application Programming Interfaces. Provide functionality such as dynamically creating HTML and setting CSS styles; collecting and manipulating a video stream from a user's webcam, or generating 3d graphics and audio samples.</li>
+          <li>Third-party APIs that allow developers to incorporate functinality in sites from other content providers, such as Twitter or Facebook.</li>
+          <li>Third-party frameworks and libraries that you can apply to HTML to accelerate the work of building sites and applications.</li>
+          <li>JavaScript is a dynamic language with dynamic types. Variables in JavaScript are not directly associated with any particular value type, and any variable can be assigned (and reassigned) values of all types.</li>
+          <li>JavaScript is also a weakly typed language, meaning it allows implicit type conversion when an operation involves mismatched types, instead of throwing typing errors.</li>
+          <li>In JavaScript, to declare a variable, we use the <code>var</code> keyword. After the var keyword, we give the variable a name. The name must be unique because it is how we will reference the information stored in the variable in our code.</li>
+          <li>Variables are containers that store values. You start by declaring a variable with the let keyword, followed by the name you give to the variable. i.e. let myVariable;</li>
+          <li>A semicolon at the end of a line indicates where a statement ends. It is only required when you need to separate statements on a single line, though some believe it is good practice to have semicolons at the end of each statement.</li>
+          <li>You can name a variable nearly anything, but there are some restrictions.</li>
+          <li>JavaScript is case sensitive. myVariable is not the same as myvariable. If you have problems with your code, check the case.</li>
+          <li>After declaring a variable, you can give it a value: <code>myVariable = "Bob";</code> You can also do both these operations on the same line: <code>let myVariable = "Bob";</code></li>
+          <li>You retrieve the value by calling the variable name: <code>myVariable;</code> After assigning a value to the variable, you can change it later in the code: <code>let myVariable = "bob";  myVariable = "Steve";</code></li>
+          <li><strong>Control Flow</strong> is the order in which a computer executes code in a script. In JavaScript, code runs from the first statement at the top of the page, down to the last statement at the bottom of the page.</li>
+          <li></li>
         </ul>
       </section>
 
@@ -72,5 +87,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
